# desertislandutils

./: .gitignore  README.md  base.justfile  bump_version.sh  justfile  pyproject.toml
.github/archive/: github-actions-demo.yml
.github/workflows/: GHA.actions-handy.yml  github-actions-demo.yml  main.yml  merge-after-tests.yml  poetry.test.yml  release.yml  test.yml
notes/: CICD-notes.md  example-gha-workflow.on-push.yaml  package-log.md  poetry-packaging-notes.md  toobigdatadoc-dev-log.md  toobigdatadoc-packaging-log.md  toobigdatadoc.poetry-pytest-problem.md  why-parallel-file-systems.md  workflow.publish-update.md  workflow.unit-testing.md
notes/weeknumber/: weeknumber.md
notes/workflows/: github.actions.auto-merge-back-to-dev.yml  github.actions.setup-python.yml  github.python-app.yml  github.python-package.yml  poetry.abatilo.CI-actions.yml
src/toobigdatadoc/: __main__.py  too.py
src/weeknumber/: wn.py
tests/: README.md  test_desertislandutils.py  test_unit.py
tests/toobigdatadoc/: test_pytest.py  test_too.py
tests/wn/: test_wn.py
todo/: RESUME.manual-build-bump-formula.md  TODO.md  bash-to-python-migrate.md  desertislandutils.markdowner.md  poetry-build-github-actions.md
